Changes in <next version>:
 * Change in build system to use qmake to find Qt locations. This is to fix
   the build inside Anaconda. Also Qt and sip parameters can now be given
   as environment variables.
 * Fix problem when picking points with too many non-finite values
 * Change default SVG export DPI to 96 to match inkscape and provide
   option in dialog to choose export DPI

Changes in 3.0:
 * New 3D support for plotting points, functions, surfaces and volumes
 * Add --export-option parameter for command line exporting control
 * Add templates in preferences for exported file names, add %PAGE00% and
   %PAGE000% options for zero-prefixed page numbers, and change %PAGENUM%
   to %PAGE%
 * In export dialog allow user to specify arbitrary pages to export
 * Change miter limit for lines, which fixes some problems when exporting
   arrow to PDFs
 * Use flat cap on lines with arrows, to avoid line showing through head
 * Support datetime64 and string/unicode characters in npy/npz import
 * Add \hat LaTeX support

Changes in 2.2.2:
 * Fix zoom for polar, ternary and broken axis plots
 * For mean and add dataset operations, allow datasets to be different
   lengths, expanding to the maximum
 * Fix broken axis if the ends of the axis are not the edge of the plot
 * Fix image embedding in Python 3
 * Update h5py to newer version in Windows binary (supporting HDF 1.10.1)
 * Fix 'fractions' and 'percentages' units in polar plot
 * Add LANG(mapping) function when evaluating labels, allowing translation
   of strings in documents

Changes in 2.2.1:
 * Fix mouse control for Key widget for different zoom levels
 * Correct coordinates shown on bottom of screen for different zoom levels
 * Fix zoom into graph functionality for different zoom levels
 * Fix plot picking for different zoom levels
 * When choosing a text dataset, fix the mini dataset browser
 * Fix crash when previewing in binary import using Python 3
 * Fix crash when picking points in certain circumstances
